src/objects/Survey_Report_Cards__c.object
<CustomObject>
    <fields>
        <fullName>Q9b_IS_Agent_Understanding_of_Question__c</fullName>
        <description>The citizens rating of the IS understanding of question or concern.</description>
        <label>Q9b-IS Agent Understanding of Question</label>
        <picklist>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>REF</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Q9c_IS_Agent_Desire_to_Resolve_Question__c</fullName>
        <description>The citizens rating of the agents desire to resolve their question or concern.</description>
        <label>Q9c-IS Agent Desire to Resolve Question</label>
        <picklist>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>REF</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Q9d_IS_Agent_Being_Knowledgeable__c</fullName>
        <description>The citizens rating of the IS knowledge about their question or concern.</description>
        <label>Q9d-IS Agent Being Knowledgeable</label>
        <picklist>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>REF</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Q9e_IS_Agent_Treating_as_Valued_Customer__c</fullName>
        <description>Did the agent treat the citizen as a valued customer.</description>
        <label>Q9e-IS Agent Treating as Valued Customer</label>
        <picklist>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>REF</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Q9f_IS_Agent_Being_Courteous__c</fullName>
        <description>Was the IS courteous when dealing with the citizen.</description>
        <label>Q9f-IS Agent Being Courteous</label>
        <picklist>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>REF</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Q9g_IS_Agent_Accuracy_of_Info_Provided__c</fullName>
        <description>Was the information provided by the agent to the citizen accurate regarding their question or concern.</description>
        <label>Q9g-IS Agent Accuracy of Info Provided</label>
        <picklist>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>REF</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Q9h_IS_Agent_Time__c</fullName>
        <description>How timely was the agent in providing an answer to the citizen.</description>
        <label>Q9h-IS Agent Timeliness</label>
        <picklist>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Related_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The related case to the closed case survey feedback.</description>
        <inlineHelpText>The related case to the closed case survey feedback.</inlineHelpText>
        <label>Related Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>Feedback_Scorecards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The related contact to the closed case survey feedback.</description>
        <inlineHelpText>The related contact to the closed case survey feedback.</inlineHelpText>
        <label>Related Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Survey Report Cards</relationshipLabel>
        <relationshipName>Feedback_Scorecards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SQ1_Contact_USA_gov__c</fullName>
        <description>Did the citizen contact USA.gov</description>
        <label>SQ1 - Contact USA.gov?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Staging_Record__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the Staging Record record from which this Survey Report Card record is created</description>
        <inlineHelpText>Choose the source Staging Record record</inlineHelpText>
        <label>Staging Record</label>
        <referenceTo>Staging_Record__c</referenceTo>
        <relationshipLabel>Survey Report Cards</relationshipLabel>
        <relationshipName>Survey_Report_Cards</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Survey Report Cards</label>
    <listViews>
        <fullName>All_Chat</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Case_Agent__c</columns>
        <columns>Feedback_Date_Time__c</columns>
        <columns>Related_Case__c</columns>
        <columns>Related_Contact__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Survey_Report_Cards__c.Chat_Survey_Report_Card</value>
        </filters>
        <label>All Chat</label>
    </listViews>
    <listViews>
        <fullName>All_Chat_actual_Record_Type</fullName>
        <columns>NAME</columns>
        <columns>Related_Case__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Q10_Specific_Issue_Resolved__c</columns>
        <columns>Q11_Contacted_Multiple_Times__c</columns>
        <columns>Q12a_What_Other_Method__c</columns>
        <columns>Q12_Method_of_Contact__c</columns>
        <columns>Q13_Contact_Another_Agency__c</columns>
        <columns>Q14_Who_Contact_Before__c</columns>
        <columns>Q1_Amount_of_Personal_Effort__c</columns>
        <columns>Q16_Ease_to_get_Question_Answered__c</columns>
        <columns>Q17_Written_by_Computer_or_Person__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Survey_Report_Cards__c.Webform_Survey_Report_Card</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>6/4/2016 12:00 AM</value>
        </filters>
        <label>All Chat (actual Record Type)</label>
    </listViews>
    <nameField>
        <displayFormat>SC-{000000}</displayFormat>
        <label>Feedback Scorecards Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Survey Report Cards</pluralLabel>
    <recordTypes>
        <fullName>Chat_Survey_Report_Card</fullName>
        <active>true</active>
        <description>Survey responses where origin equals chat.</description>
        <label>Chat Survey Report Card</label>
    </recordTypes>
    <recordTypes>
        <fullName>Phone_Survey_Report_Card</fullName>
        <active>true</active>
        <description>Survey responses where origin equals phone.</description>
        <label>Phone Survey Report Card</label>
    </recordTypes>
    <recordTypes>
        <fullName>Webform_Survey_Report_Card</fullName>
        <active>true</active>
        <description>Survey responses where origin equals webform.</description>
        <label>Webform Survey Report Card</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>